feat: add spotless plugin